--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Georgia', monospace;
-    background-color: #2c3e50; /* Darker sidebar background */
+    background-color: #2c3e50; 
   color: #a0b8fa;
   display: flex;
   flex-direction: column;
